--- a/.env-example
+++ b/.env-example
@@ -22,3 +22,4 @@ KAO_TEMPLATE_AUTH_SECRET=
 MONGO_HOST=localhost
 MONGO_PORT=27017
 MONGO_DB_NAME=kao-template
+MONGO_URL=mongodb://localhost:27017/kao-template
