--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "name": "adhityasan",
     "email": "adhityad3v@gmail.com"
   },
+  "license": "MIT",
   "contributors": [],
   "bugs": {},
   "directories": {
