set eslintrc globals

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -25,5 +25,10 @@
       "error",
       "always"
     ]
+  },
+  "globals": {
+    "describe": false,
+    "before": false,
+    "after": false
   }
 }
